<resources>
    <string name="app_name">EPL16Score</string>
    <string name="action_settings">Settings</string>
    <string name="sumbit">START GAME</string>
    <string name="batting_team">Batting Team</string>
    <string name="bowling_team">Bowling Team</string>
    <string name="team_a">Machanz 11</string>
    <string name="team_b">Atholokamz</string>
    <string name="team_c">Alambanz</string>
    <string name="team_d">Winnerz</string>


    <string name="run0">0</string>
    <string name="run1">1</string>
    <string name="run2">2</string>
    <string name="run4">4</string>
    <string name="noball">NB</string>
    <string name="wide">WID</string>
    <string name="wicket">WKT</string>
    <string name="phase">PHASE</string>
    <string name="chance">CHANCE</string>
    <string name="over">OVER</string>
    <string name="back">BACK</string>
    <string name="playername">Player Name</string>
    <string name="ok">OK</string>
    <string name="bowler">Bowler</string>
    <string name="batsman">Batsman</string>
    <string name="nextbatsman">Next Batsman</string>
    <string name="nextover">NEXT OVER</string>
    <string name="reset">Reset</string>
    <string name="out">Out</string>
    <string name="wkt">Wicket</string>
    <string name="endinnings">Innings 01 End</string>
    <string name="matchend">Match End</string>

    <string-array name="playerslist">
        <item>Sushen SJ</item>
        <item>Pradeep</item>
        <item>Arun A</item>
        <item>Bibin Babu</item>
        <item>Mashesh CS</item>
        <item>Lijo Joseph</item>
        <item>Sojan C Das</item>
        <item>Santhosh</item>
        <item>Jefin</item>

        <item>Sreejith S</item>
        <item>Bala Ganeshan V</item>
        <item>Ershad J</item>
        <item>Rojish </item>
        <item>Vishnu</item>
        <item>Praveen</item>
        <item>Jayesh</item>
        <item>Reagan</item>
        <item>Sumesh</item>

        <item>Johnson</item>
        <item>Sreejith Sasidharan</item>
        <item>Vijin</item>
        <item>Mukesh</item>
        <item>Joseph</item>
        <item>Binoj</item>
        <item>Jikku</item>
        <item>Amaljith</item>
        <item>Aneesh</item>

        <item>Hari</item>
        <item>Abilash</item>
        <item>Kiran K</item>
        <item>Mathew </item>
        <item>Prakash</item>
        <item>Rajeev</item>
        <item>Deepu</item>
        <item>KiranLAl</item>
        <item>Deepak</item>
    </string-array>

</resources>
