<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:id="@+id/layout1"
   android:layout_marginTop="10dp"
    android:layout_gravity="center|top"

    android:background="@drawable/rounded_corner"
    android:gravity="center"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/background">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="35dp"
    android:padding="10dp"
    android:text="machanz11"
    android:id="@+id/teamname_txt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="10dp"
        android:text="0"
        android:id="@+id/totalrun_txt"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="/"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:padding="10dp"
        android:text="0"
        android:id="@+id/totalwkt_txt"/>
</LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout2"
        android:layout_below="@id/layout1"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"

        tools:ignore="RtlCompat">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:text="@string/over"
          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="0"
            android:layout_margin="2dp"
            android:id="@+id/totalover_txt" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_margin="2dp"
            android:text="."
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="0"
            android:layout_margin="2dp"
            android:id="@+id/totalball_txt" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout3"
        android:background="@drawable/background"
        android:layout_below="@id/layout2"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/run0_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/run0"
            android:background="@drawable/rounded_corner"
            />
        <Button
            android:id="@+id/run1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/run1"
            android:background="@drawable/rounded_corner"
            />
        <Button
            android:id="@+id/run2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/run2"
            android:background="@drawable/rounded_corner"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layout4"
        android:layout_below="@id/layout3"
        android:background="@drawable/background"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/run4_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@drawable/rounded_corner"
            android:layout_weight="1"
            android:text="@string/run4"
            />
        <Button
            android:id="@+id/noball_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@drawable/rounded_corner"
            android:layout_weight="1"
            android:text="@string/noball"
            />
        <Button
            android:id="@+id/wide_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/wide"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout5"
        android:layout_below="@id/layout4"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@drawable/background"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/wicket_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/wicket"
            android:background="@drawable/rounded_corner"
            />
        <Button
            android:id="@+id/phase_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:text="@string/phase"
            android:background="@drawable/rounded_corner"
            />
        <Button
            android:id="@+id/chance_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@drawable/rounded_corner"
           android:layout_weight="1"
            android:text="@string/chance"
            />

    </LinearLayout>
    <LinearLayout

        android:id="@+id/layout6"
        android:padding="5dp"
        android:background="@drawable/background"
        android:layout_below="@id/layout5"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/back_btn"
        android:background="@drawable/rounded_corner"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        />
        <!--add new button :bibin-->

    </LinearLayout>

</RelativeLayout>